<resources>
    <string name="app_name">Alpha Money</string>
    <string name="title_activity_income">income</string>
    <string name="title_activity_expense_week">ExpenseWeek</string>
    <string name="title_activity_expense_month">ExpenseMonth</string>
    <string name="title_activity_income_today">IncomeToday</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="store">Store</string>
    <string name="memo">Memo</string>
    <string name="save">Save</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="base">fragment base</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">오늘</string>
    <string name="DetailActivity">DetailActivity</string>
    <string name="confirm">확인</string>
    <string name="title_activity_maps">Map</string>
</resources>
