<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hongik.alpha_money.Activity.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/detail_editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="82dp"
            android:ems="10"
            android:inputType="date">
        </EditText>

        <EditText
            android:id="@+id/detail_editTextCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/detail_editTextStore"
            android:layout_below="@+id/detail_editTextStore"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/detail_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/detail_editTextDate"
            android:layout_alignParentLeft="true"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/detail_confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick=""
            android:text="@string/confirm"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/detail_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/detail_editTextCategory"
            android:layout_alignLeft="@+id/detail_textView1"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/detail_textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/detail_editTextPrice"
            android:layout_alignLeft="@+id/detail_textView1"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/detail_textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/detail_editTextCategory"
            android:layout_alignLeft="@+id/detail_textView5"
            android:text="@string/store"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/detail_editTextMemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/detail_editTextDate"
            android:layout_below="@+id/detail_editTextCategory"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/detail_textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/detail_editTextMemo"
            android:layout_alignBottom="@+id/detail_editTextMemo"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/detail_editTextCategory"
            android:text="@string/memo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/detail_editTextStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/detail_editTextDate"
            android:layout_below="@+id/detail_editTextPrice"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/detail_editTextPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/detail_editTextStore"
            android:layout_below="@+id/detail_editTextDate"
            android:ems="10"
            android:inputType="numberSigned" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="삭제"
            android:checked="false"
            android:id="@+id/detail_deleteButton"
            android:layout_alignParentBottom="true"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_map"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="지도"
            />
    </RelativeLayout>
</ScrollView>
