<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hongik.alpha_money.Activity.AddDataActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="82dp"
            android:ems="10"
            android:hint="ex)20160515"
            android:gravity="center"
            android:inputType="date" >
        </EditText>

        <EditText
            android:id="@+id/editTextCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextStore"
            android:layout_below="@+id/editTextStore"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView1"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextDate"
            android:layout_alignParentLeft="true"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView2"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextCategory"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextPrice"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextCategory"
            android:layout_alignLeft="@+id/textView5"
            android:text="@string/store"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextMemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/editTextDate"
            android:layout_below="@+id/editTextCategory"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView3"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextMemo"
            android:layout_alignBottom="@+id/editTextMemo"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/editTextCategory"
            android:text="@string/memo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/editTextStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextDate"
            android:layout_below="@+id/editTextPrice"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextStore"
            android:layout_below="@+id/editTextDate"
            android:ems="10"
            android:hint="(필수)"
            android:gravity="center"
            android:inputType="numberSigned">
            <requestFocus />
        </EditText>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="지출"
            android:textOn="수입"
            android:checked="false"
            android:id="@+id/toggleButton"
            android:layout_alignParentBottom="true"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="닫기"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:id="@+id/closeButton"
            />
    </RelativeLayout>
</ScrollView>
